brat/test/golden/error/kbadvec2.brat
triple :: { Bit -o Vec(Bit, 3) }
triple = { b => nil }
