brat/test/golden/error/kbadvec2.brat.golden
Error in test/golden/error/kbadvec2.brat on line 2:
triple = { b => nil }
                ^^^

  Unification error: Couldn't force 3 to be 0

